# GetUrGame

./: .dockerignore  README.md  docker-compose.yml
backend/: .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  pytest.ini
backend/backend/: manage.py
backend/backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend/data/: tfidf.pkl
backend/backend/favourites/: models.py  serializers.py  tests.py  urls.py  views.py
backend/backend/games/: admin.py  serializers.py  tests.py  urls.py  views.py
backend/backend/main/: admin.py  decorators.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/backend/main/management/commands/: wait_for_db.py
backend/backend/main/migrations/: 0001_initial.py  0002_favoritegame.py
backend/backend/model/: model.py
backend/backend/users/: models.py  tests.py  urls.py  views.py
backend/core/: settings.py
backend/data/: model.py  scaler.pkl
backend/main/: urls.py  views.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx
frontend/src/components/: AppHeader.jsx  Favorites.jsx  GameBox.jsx  GetRecs.jsx  Homepage.jsx  NeonButton.jsx  Pagination.jsx  SteamCallback.jsx  UserGames.jsx
frontend/src/components/__tests__/: AppHeader.test.jsx  Favorites.test.jsx  GetRecs.test.jsx  Homepage.test.jsx  UserGames.test.jsx
frontend/src/misc/: Api.jsx
frontend/src/utils/: Api.jsx
model_service/: Dockerfile  README.md  app.py  requirements.txt  train.py
