[project]
name = "geturgame"
version = "0.1.0"
description = "Project that serves as an AI-powered tool for recommending games for Steam users, based on their library."
authors = [
    {name = "Vic K.",email = "kondratskayavictoria@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-configurations (>=2.5.1,<3.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "keras (>=3.8.0,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
